examples/test/testpolicy16407.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16407
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key45: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value16
          key37: value21
          key24: value25
      podSelector:
        matchLabels:
          key17: value20
          key39: value27
